form alignment fixes

--- a/angular/style/components/form.styl
+++ b/angular/style/components/form.styl
@@ -2,7 +2,7 @@
 	border-color #777
 	
 .form-control-short
-	width 60px
+	width 73px
 
 .form-title
 	margin-bottom 1em
