--- a/angular/style/components/util.styl
+++ b/angular/style/components/util.styl
@@ -40,7 +40,7 @@
 	height 100%
 	
 .product-quantity-na
-	width 60px
+	width 73px
 	display flex
 	align-items center
 	justify-content center
